--- a/.env
+++ b/.env
@@ -14,3 +14,9 @@ STARK_PRIVATE_KEY_TESTNET = "06abf257c79eb39f68468adc24aefe4f99a4ce649ae11493d9a
 DYDX_API_KEY_TESTNET ="1d65f71f-8ae6-4773-b896-df5b149cfa1e"
 DYDX_API_SECRET_TESTNET ="6Ikdhp8OjOf5VXoivf9PukA7YuN5vxttAvaYKS1l"
 DYDX_API_PASSPHRASE_TESTNET ="2wiaJQDwwOh2oG-7uKcd"
+
+# TELEGRAM ITEMS
+TELEGRAM_TOKEN = "6077649604:AAH3fxvqjSfAK_JnFDG4aCRbXh36kaUFU0w"
+TELEGRAM_CHAT_ID = "1217892714"
+
+"https://api.telegram.org/bot{bot_token}/sendMessage?chat_id={chat_id}&text={message}"
